updated composer.json keywords

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
     "keywords": [
         "smarty",
         "xoops",
+        "links",
+        "counter",
+        "pagination",
         "smarty-plugins"
     ]
 }
