--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
     "description": "Smarty template engine plugins collections based on ideas for plugins from XOOPS",
     "type": "library",
     "require": {
-        "imponeer/smarty-extensions-contracts": "^1.0 || ^2.0",
-        "php": ">=7.1"
+        "imponeer/smarty-extensions-contracts": "^3.0",
+        "php": "^7.3 | ^8.0",
+        "ext-mbstring": "*"
     },
     "license": "MIT",
     "authors": [
@@ -25,5 +26,11 @@
         "counter",
         "pagination",
         "smarty-plugins"
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^8.0"
+    },
+    "scripts": {
+        "test": "phpunit --testdox"
+    }
 }
